# temperature-calculator

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yaml
calculator/: boundary_condition_definer.py  calculator.py  config.py  method_calculator.py
calculator/amount_polystyrene/: amount_polystyrene.py
calculator/basic/: boundary_condition_definer.py  calculator.py  config.py  method_calculator.py
calculator/multivariants/: config.py  multivariants.py
calculator/shared_data/: boundary_condition_definer.py  data_validator.py  method_calculator.py  outside_inside_thermal_data.py
calculator/shared_data/method_calc/: fem.py
main/: boundary_condition_definer.py  calculator.py  config.py  method.py  method_calculator.py
tests/: heat_information.json  test_e2e_calculator.py
tests/amount_polystyrene/: amount_polystyrene.py  test_amount_and_price_polystyrene.py  test_e2e_calculate_amount_polystyrene.py
tests/basic_calc/: building_partition.txt  heat_information_dirichlet_dirichlet.json  test_e2e_calculator.py
tests/multivariants/: building_partition.py  building_partition_without_polystyrene.py  expected_temperatures.csv  expected_temperatures.py  expected_temperatures_without_polystyrene.py  heat_information.py  heat_information_dirichlet_neumann.json  outside_inside_thermal_data.py  polystyrene_data.py  test_e2e_calculator.py  test_e2e_multivariants.py  warstwy_przegrody.xlsx
tools/: file_helper.py
