[build-system]
requires = [
    "setuptools>=68",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { }

[tool.setuptools.packages.find]
exclude = ["tests*"]

[project]
name = "temperature_calculator"
version = "0.0.4.1"
authors = [{ name = "Rafał Protasiuk", email = "rafpro33@gmail.com" }]
description = "to calculate the heat in the building envelope"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

requires-python = ">=3.8.5"