[metadata]
name = temperature_calculator
version = 0.0.3.1
author = Rafał Protasiuk
author_email = rafpro33@gmail.com
description = to calculate the heat in the building envelope
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafinder1/temperature_calculator.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8.5